--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 streamlit==1.38.0
-tflite-runtime==2.14.0
+tensorflow-cpu==2.13.0
+keras==2.13.1
 numpy==1.24.3
 pillow==10.2.0
 plotly==5.24.0
 gdown==5.2.0
+protobuf==4.25.3
 h5py==3.9.0
