--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 streamlit==1.38.0
-tflite-runtime==2.14.0
-numpy==1.24.3
-pillow==10.2.0
-plotly==5.24.0
-gdown==5.2.0
-h5py==3.9.0
+tensorflow-cpu==2.17.0
+numpy==1.26.4
+pillow==10.4.0
+plotly==5.23.0
