--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.38.0
-tflite-runtime==2.13.0
-numpy==1.26.4
-pillow==10.4.0
-plotly==5.23.0
+streamlit==1.35.0
+tensorflow==2.12.0
+numpy==1.24.3
+pillow==10.3.0
+matplotlib==3.7.5
+plotly==5.22.0
